--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,10 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "types": ["node", "jspdf"]
+    "types": ["node", "jspdf", "qrcode"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
+
+    
